{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 63,
  "lineage": "651e38c7-9610-8659-1d6a-f271b651d610",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0893c90bb841df4e8",
            "arn": "arn:aws:ec2:us-east-2:011528301416:elastic-ip/eipalloc-0893c90bb841df4e8",
            "association_id": "eipassoc-00065584b10d9d963",
            "domain": "vpc",
            "id": "eipalloc-0893c90bb841df4e8",
            "network_border_group": "us-east-2",
            "network_interface": "eni-00c2cc5486aefb25d",
            "private_dns": "ip-10-30-10-165.us-east-2.compute.internal",
            "private_ip": "10.30.10.165",
            "public_dns": "ec2-3-141-48-138.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.48.138",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ngw-eip"
            },
            "tags_all": {
              "Name": "ngw-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.staging",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:internet-gateway/igw-02ca122f283f43107",
            "id": "igw-02ca122f283f43107",
            "owner_id": "011528301416",
            "tags": {
              "Name": "staging-igw"
            },
            "tags_all": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0893c90bb841df4e8",
            "association_id": "eipassoc-00065584b10d9d963",
            "connectivity_type": "public",
            "id": "nat-05fa763edcc2817ff",
            "network_interface_id": "eni-00c2cc5486aefb25d",
            "private_ip": "10.30.10.165",
            "public_ip": "3.141.48.138",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0398723efb90b0812",
            "tags": {
              "Name": "staging-ngw"
            },
            "tags_all": {
              "Name": "staging-ngw"
            }
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.staging",
            "aws_subnet.staging_pub_1",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri_rtr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:route-table/rtb-016f9568255a11097",
            "id": "rtb-016f9568255a11097",
            "owner_id": "011528301416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05fa763edcc2817ff",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rtr"
            },
            "tags_all": {
              "Name": "private-rtr"
            },
            "timeouts": null,
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.staging",
            "aws_nat_gateway.staging",
            "aws_subnet.staging_pub_1",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rtr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:route-table/rtb-0d595018e94476c8a",
            "id": "rtb-0d595018e94476c8a",
            "owner_id": "011528301416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ca122f283f43107",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtr"
            },
            "tags_all": {
              "Name": "public-rtr"
            },
            "timeouts": null,
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.staging",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3f65220262bd4ee",
            "route_table_id": "rtb-016f9568255a11097",
            "subnet_id": "subnet-0a805761ab9ad5bb6"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.staging",
            "aws_nat_gateway.staging",
            "aws_route_table.pri_rtr",
            "aws_subnet.staging_pri_1",
            "aws_subnet.staging_pub_1",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f56439ccb8bcf25",
            "route_table_id": "rtb-016f9568255a11097",
            "subnet_id": "subnet-00facfa4b65b7f970"
          },
          "dependencies": [
            "aws_eip.natgw_eip",
            "aws_internet_gateway.staging",
            "aws_nat_gateway.staging",
            "aws_route_table.pri_rtr",
            "aws_subnet.staging_pri_2",
            "aws_subnet.staging_pub_1",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0c6477aef78fba1",
            "route_table_id": "rtb-0d595018e94476c8a",
            "subnet_id": "subnet-0398723efb90b0812"
          },
          "dependencies": [
            "aws_internet_gateway.staging",
            "aws_route_table.pub_rtr",
            "aws_subnet.staging_pub_1",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7fc02425a44d984",
            "route_table_id": "rtb-0d595018e94476c8a",
            "subnet_id": "subnet-0345b374346355476"
          },
          "dependencies": [
            "aws_internet_gateway.staging",
            "aws_route_table.pub_rtr",
            "aws_subnet.staging_pub_2",
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:security-group/sg-085d85846d8f82412",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085d85846d8f82412",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "011528301416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.staging"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:security-group/sg-0221ff46fe7b54e38",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0221ff46fe7b54e38",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-085d85846d8f82412"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4d40b6193a16e40"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4d40b6193a16e40"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "011528301416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-sg"
            },
            "tags_all": {
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.pub_sg",
            "aws_vpc.staging"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:security-group/sg-0b4d40b6193a16e40",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4d40b6193a16e40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "011528301416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.staging"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "staging_pri_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:subnet/subnet-0a805761ab9ad5bb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.30.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a805761ab9ad5bb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528301416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-pri-1"
            },
            "tags_all": {
              "Name": "staging-pri-1"
            },
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "staging_pri_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:subnet/subnet-00facfa4b65b7f970",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.30.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00facfa4b65b7f970",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528301416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-pri-2"
            },
            "tags_all": {
              "Name": "staging-pri-2"
            },
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "staging_pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:subnet/subnet-0398723efb90b0812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.30.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0398723efb90b0812",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528301416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-pub-1"
            },
            "tags_all": {
              "Name": "staging-pub-1"
            },
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "staging_pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:subnet/subnet-0345b374346355476",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.30.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0345b374346355476",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "011528301416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-pub-2"
            },
            "tags_all": {
              "Name": "staging-pub-2"
            },
            "vpc_id": "vpc-004dd1af81fe528ed"
          },
          "dependencies": [
            "aws_vpc.staging"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "staging",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:011528301416:vpc/vpc-004dd1af81fe528ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-0e1846bbbd35b7d0b",
            "default_route_table_id": "rtb-0b96e66e8c93f778d",
            "default_security_group_id": "sg-0d7d9986509bf1b28",
            "dhcp_options_id": "dopt-0e4ac4654456e6740",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004dd1af81fe528ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b96e66e8c93f778d",
            "owner_id": "011528301416",
            "tags": {
              "Environment": "staging",
              "Name": "staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "staging-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}